--- a/Core/1.13Environment-Abstraction.md
+++ b/Core/1.13Environment-Abstraction.md
@@ -95,7 +95,7 @@ public @Interface Production {
 }
 ~~~
 
->如果@configuration类被标记为@Profile，那么所有与该类关联的@Bean方法和@Import注解都将被忽略，除非一个或多个指定的概要文件处于活动状态。如果@component或@configuration类标记为@Profile（“p1”、“p2”），则除非激活了配置文件“p1”或“p2”，否则不会注册或处理该类。如果给定配置文件的前缀是not运算符（！），仅当配置文件未处于活动状态时，才会注册带注解的元素。例如，给定@Profile（“p1”，“！p2“”），如果配置文件“p1”处于活动状态或配置文件“p2”未处于活动状态，则会发生注册。
+>如果@Configuration类被标记为@Profile，那么所有与该类关联的@Bean方法和@Import注解都将被忽略，除非一个或多个指定的概要文件处于活动状态。如果@Component或@Configuration类标记为@Profile（“p1”、“p2”），则除非激活了配置文件“p1”或“p2”，否则不会注册或处理该类。如果给定配置文件的前缀是not运算符（！），仅当配置文件未处于活动状态时，才会注册带注解的元素。例如，给定@Profile（“p1”，“！p2“”），如果配置文件“p1”处于活动状态或配置文件“p2”未处于活动状态，则会发生注册。
 
 @Profile也可以用在方法级别用来包含一个特殊的bean或者配置类。如下所示：
 
