--- a/Core/1.4Dependencies.md
+++ b/Core/1.4Dependencies.md
@@ -892,7 +892,7 @@ Spring容器可以自动连接协作bean之间的关系。通过检查Applicatio
 
 **从自动装载中排除Bean**
 
-您可以从自动装载中排除bean。在Spring的XML格式中，将< bean/>元素的autowire-candidate属性设置为false。则这个bean在自动装载时将会不可用（包括注解样式的配置，如@autowired）。
+您可以从自动装载中排除bean。在Spring的XML格式中，将< bean/>元素的autowire-candidate属性设置为false。则这个bean在自动装载时将会不可用（包括注解样式的配置，如@Autowired）。
 
 >autowire-candidate属性设计为只影响type-based的自动注解。它不会影响显式的按名字的引用，即使指定的bean没有标记为autowire候选对象，这些引用也会得到解析。因此，如果名称匹配，则按name自动装载仍会注入bean。
 
