--- a/Core/3.4Spring-type-conversion.md
+++ b/Core/3.4Spring-type-conversion.md
@@ -77,7 +77,7 @@ final class StringToEnumConverterFactory implements ConverterFactory<String, Enu
 
 ## 3.4.3 使用GenericConverter
 
-当需要复杂的Converter实现时，请考虑使用GenericConverter接口。与Converter相比，GenericConverter具有更灵活但不太强类型的签名，它支持在多个源类型和目标类型之间进行转换。此外，GenericConverter提供了可用的源和目标字段上下文，您可以在实现转换逻辑时使用它们。这样的上下文允许类型转换由字段注释或字段签名上声明的一般信息驱动。下面的列表显示了GenericConverter的接口定义：
+当需要复杂的Converter实现时，请考虑使用GenericConverter接口。与Converter相比，GenericConverter具有更灵活但不太强类型的签名，它支持在多个源类型和目标类型之间进行转换。此外，GenericConverter提供了可用的源和目标字段上下文，您可以在实现转换逻辑时使用它们。这样的上下文允许类型转换由字段注解或字段签名上声明的一般信息驱动。下面的列表显示了GenericConverter的接口定义：
 
 ~~~
 package org.springframework.core.convert.converter;
