--- a/Core/3.7Spring-Validation.md
+++ b/Core/3.7Spring-Validation.md
@@ -1,6 +1,6 @@
 # 3.7 Spring验证
 
-Spring3为其验证支持引入了一些增强功能。首先，完全支持JSR-303 bean验证API。第二，当以编程方式使用时，Spring的DataBinder既可以验证对象，也可以绑定到对象。第三，SpringMVC支持声明性地验证@controller输入。
+Spring3为其验证支持引入了一些增强功能。首先，完全支持JSR-303 bean验证API。第二，当以编程方式使用时，Spring的DataBinder既可以验证对象，也可以绑定到对象。第三，SpringMVC支持声明性地验证@Controller输入。
 
 ## 3.7.1 JSR-303 Bean Validation API 概览
 
@@ -88,7 +88,7 @@ public class MyService {
 @Target({ElementType.METHOD, ElementType.FIELD})
 @Retention(RetentionPolicy.RUNTIME)
 @Constraint(validatedBy=MyConstraintValidator.class)
-public @interface MyConstraint {
+public @Interface MyConstraint {
 }
 ~~~
 
