--- a/Core/4.2Expressions-in-Bean-Definitions.md
+++ b/Core/4.2Expressions-in-Bean-Definitions.md
@@ -84,7 +84,7 @@ public static class PropertyValueTestBean
 }
 ~~~
 
-autowired方法和构造函数也可以使用@value注释，如下示例所示：
+autowired方法和构造函数也可以使用@value注解，如下示例所示：
 
 ~~~
 public class SimpleMovieLister {
