--- a/Core/5.1AOP-Concepts.md
+++ b/Core/5.1AOP-Concepts.md
@@ -2,7 +2,7 @@
 
 让我们首先定义一些核心的AOP概念和术语。这些术语并非特定于Spring。不幸的是，AOP术语并不是特别直观。然而，如果Spring使用自己的术语，则会更加令人困惑。
 
-* 方面（Aspect）：跨越多个类的模块化关注点。事务管理是企业Java应用程序中横切关注点的一个很好的例子。在SpringAOP中，方面是通过使用常规类（基于模式的方法）或使用@Aspect注解（@aspectj样式）注解的常规类来实现的。
+* 方面（Aspect）：跨越多个类的模块化关注点。事务管理是企业Java应用程序中横切关注点的一个很好的例子。在SpringAOP中，方面是通过使用常规类（基于模式的方法）或使用@Aspect注解（@Aspectj样式）注解的常规类来实现的。
 
 * 连接点（Join point）：程序执行过程中的一点，如方法的执行或异常的处理。在SpringAOP中，连接点总是表示一个方法执行。
 
