--- a/Core/5.8Proxying-Mechanisms.md
+++ b/Core/5.8Proxying-Mechanisms.md
@@ -16,7 +16,7 @@ SpringAOP使用JDK动态代理或CGLIB为给定的目标对象创建代理。JDK
 </aop:config>
 ~~~
 
-要在使用@aspectj auto proxy支持时强制cglib代理，请将&lt;aop:aspectj-autoproxy>元素的proxy-target-class属性设置为true，如下所示：
+要在使用@Aspectj auto proxy支持时强制cglib代理，请将&lt;aop:aspectj-autoproxy>元素的proxy-target-class属性设置为true，如下所示：
 
 ~~~
 <aop:aspectj-autoproxy proxy-target-class="true"/>
