--- a/Core/5.7Mixing-Aspect-Types.md
+++ b/Core/5.7Mixing-Aspect-Types.md
@@ -1,4 +1,4 @@
 # 5.7 混合Aspect类型
 
-通过使用自动代理支持、schema-defined的&lt;aop:aspect> aspects、&lt;aop:advisor> declared advisors，甚至在同一配置中使用其他样式的代理和拦截器，完全可以混合@aspectj样式的方面。所有这些都是通过使用相同的底层支持机制实现的，并且可以毫不费力地共存。
+通过使用自动代理支持、schema-defined的&lt;aop:aspect> aspects、&lt;aop:advisor> declared advisors，甚至在同一配置中使用其他样式的代理和拦截器，完全可以混合@Aspectj样式的方面。所有这些都是通过使用相同的底层支持机制实现的，并且可以毫不费力地共存。
 
