--- a/Core/5.5Schema-based-AOP-Support.md
+++ b/Core/5.5Schema-based-AOP-Support.md
@@ -1,4 +1,4 @@
-# 5.5 基于架构的AOP支持
+# 5.5 基于Schema的AOP支持
 
 如果您喜欢基于XML的格式，Spring还提供了使用新的AOP名称空间标记定义方面的支持。支持与使用@Aspectj样式时完全相同的切入点表达式和通知类型。因此，在本节中，我们将重点介绍新的语法，并将读者引向上一节（@Aspectj support）中的讨论，以了解如何编写切入点表达式以及如何绑定通知参数。
 
