--- a/Core/5.5Schema-based-AOP-Support.md
+++ b/Core/5.5Schema-based-AOP-Support.md
@@ -282,7 +282,7 @@ schema-based的声明样式支持完全类型化的通知，方法与@Aspectj su
 
 ~~~
 <aop:before
-    pointcut="com.xyz.lib.Pointcuts.anyPublicMethod() and @Annotation(auditable)"
+    pointcut="com.xyz.lib.Pointcuts.anyPublicMethod() and @annotation(auditable)"
     method="audit"
     arg-names="auditable"/>
 ~~~
@@ -551,6 +551,6 @@ public @Interface Idempotent {
 ~~~
 <aop:pointcut id="idempotentOperation"
         expression="execution(* com.xyz.myapp.service.*.*(..)) and
-        @Annotation(com.xyz.myapp.service.Idempotent)"/>
+        @annotation(com.xyz.myapp.service.Idempotent)"/>
 ~~~
 
