--- a/Testing/3.4Annotations.md
+++ b/Testing/3.4Annotations.md
@@ -14,9 +14,9 @@
 
 ## 3.4.1 Spring测试注解
 
-Spring Framework提供了以下一组特定于Spring的注释，您可以在单元和集成测试中结合TestContext框架使用它们。 有关详细信息，请参阅相应的javadoc，包括默认属性值，属性别名和其他详细信息。
+Spring Framework提供了以下一组特定于Spring的注解，您可以在单元和集成测试中结合TestContext框架使用它们。 有关详细信息，请参阅相应的javadoc，包括默认属性值，属性别名和其他详细信息。
 
-Spring的测试注释包括以下内容：
+Spring的测试注解包括以下内容：
 
 * @BootstrapWith
 
@@ -50,13 +50,13 @@ Spring的测试注释包括以下内容：
 
 **@BootstrapWith**
 
-@BootstrapWith是一个类级注释，可用于配置Spring TestContext Framework的引导方式。 具体来说，您可以使用@BootstrapWith指定自定义TestContextBootstrapper。 有关更多详细信息，请参阅有关引导TestContext框架的部分。
+@BootstrapWith是一个类级注解，可用于配置Spring TestContext Framework的引导方式。 具体来说，您可以使用@BootstrapWith指定自定义TestContextBootstrapper。 有关更多详细信息，请参阅有关引导TestContext框架的部分。
 
 **@ContextConfiguration**
 
-@ContextConfiguration定义类级元数据，用于确定如何为集成测试加载和配置ApplicationContext。 具体来说，@ ContextConfiguration声明应用程序上下文资源位置或用于加载上下文的带注释的类。
+@ContextConfiguration定义类级元数据，用于确定如何为集成测试加载和配置ApplicationContext。 具体来说，@ ContextConfiguration声明应用程序上下文资源位置或用于加载上下文的带注解的类。
 
-资源位置通常是位于类路径中的XML配置文件或Groovy脚本，而带注释的类通常是@Configuration类。 但是，资源位置也可以引用文件系统中的文件和脚本，带注释的类可以是组件类，依此类推。
+资源位置通常是位于类路径中的XML配置文件或Groovy脚本，而带注解的类通常是@Configuration类。 但是，资源位置也可以引用文件系统中的文件和脚本，带注解的类可以是组件类，依此类推。
 
 以下示例显示了引用XML文件的@ContextConfiguration批注：
 
@@ -76,7 +76,7 @@ public class ConfigClassApplicationContextTests {
 }
 ~~~
 
-作为声明资源位置或带注释的类的替代或补充，您可以使用@ContextConfiguration来声明ApplicationContextInitializer类。 以下示例显示了这种情况：
+作为声明资源位置或带注解的类的替代或补充，您可以使用@ContextConfiguration来声明ApplicationContextInitializer类。 以下示例显示了这种情况：
 
 ~~~java
 @ContextConfiguration(initializers = CustomContextIntializer.class) 
@@ -85,7 +85,7 @@ public class ContextInitializerTests {
 }
 ~~~
 
-您也可以选择使用@ContextConfiguration来声明ContextLoader策略。 但请注意，您通常不需要显式配置加载程序，因为默认加载程序支持初始化程序以及资源位置或带注释的类。
+您也可以选择使用@ContextConfiguration来声明ContextLoader策略。 但请注意，您通常不需要显式配置加载程序，因为默认加载程序支持初始化程序以及资源位置或带注解的类。
 
 以下示例使用位置和加载器：
 
@@ -100,7 +100,7 @@ public class CustomLoaderXmlApplicationContextTests {
 
 **@WebAppConfiguration**
 
-@WebAppConfiguration是一个类级别的注释，可用于声明为集成测试加载的ApplicationContext应该是WebApplicationContext。 仅在测试类上存在@WebAppConfiguration可确保为测试加载WebApplicationContext，使用默认值“file:src/main/webapp”作为Web应用程序根目录的路径（即资源） 基本路径）。 在后台使用资源基本路径来创建MockServletContext，它充当测试的WebApplicationContext的ServletContext。
+@WebAppConfiguration是一个类级别的注解，可用于声明为集成测试加载的ApplicationContext应该是WebApplicationContext。 仅在测试类上存在@WebAppConfiguration可确保为测试加载WebApplicationContext，使用默认值“file:src/main/webapp”作为Web应用程序根目录的路径（即资源） 基本路径）。 在后台使用资源基本路径来创建MockServletContext，它充当测试的WebApplicationContext的ServletContext。
 
 以下示例显示如何使用@WebAppConfiguration批注：
 
@@ -126,7 +126,7 @@ public class WebAppTests {
 
 **@ContextHierarchy**
 
-@ContextHierarchy是一个类级别注释，用于为集成测试定义ApplicationContext实例的层次结构。 应使用一个或多个@ContextConfiguration实例的列表声明@ContextHierarchy，每个实例定义上下文层次结构中的级别。 以下示例演示了在单个测试类中使用@ContextHierarchy（@ContextHierarchy也可以在测试类层次结构中使用）：
+@ContextHierarchy是一个类级别注解，用于为集成测试定义ApplicationContext实例的层次结构。 应使用一个或多个@ContextConfiguration实例的列表声明@ContextHierarchy，每个实例定义上下文层次结构中的级别。 以下示例演示了在单个测试类中使用@ContextHierarchy（@ContextHierarchy也可以在测试类层次结构中使用）：
 
 ~~~java
 @ContextHierarchy({
@@ -153,7 +153,7 @@ public class WebIntegrationTests {
 
 **@ActiveProfiles**
 
-@ActiveProfiles是一个类级注释，用于在为集成测试加载ApplicationContext时声明哪些bean定义配置文件应该处于活动状态。
+@ActiveProfiles是一个类级注解，用于在为集成测试加载ApplicationContext时声明哪些bean定义配置文件应该处于活动状态。
 
 以下示例表明dev配置文件应处于活动状态：
 
@@ -179,7 +179,7 @@ public class DeveloperIntegrationTests {
 
 **@TestPropertySource**
 
-@TestPropertySource是一个类级别注释，可用于配置属性文件的位置和内联属性，以便为集成测试加载的ApplicationContext添加到环境中的PropertySource集合中。
+@TestPropertySource是一个类级别注解，可用于配置属性文件的位置和内联属性，以便为集成测试加载的ApplicationContext添加到环境中的PropertySource集合中。
 
 测试属性源的优先级高于从操作系统环境或Java系统属性加载的属性源，以及应用程序通过@PropertySource或以编程方式声明性地添加的属性源。 因此，测试属性源可用于有选择地覆盖系统和应用程序属性源中定义的属性。 此外，内联属性的优先级高于从资源位置加载的属性。
 
@@ -207,7 +207,7 @@ public class MyIntegrationTests {
 
 @DirtiesContext指示在执行测试期间底层Spring ApplicationContext已被弄脏（即，测试以某种方式修改或损坏它 - 例如，通过更改单例bean的状态）并且应该关闭。当应用程序上下文被标记为脏时，它将从测试框架的缓存中删除并关闭。因此，对于需要具有相同配置元数据的上下文的任何后续测试，都会重建基础Spring容器。
 
-您可以将@DirtiesContext用作同一类或类层次结构中的类级别和方法级别注释。在这种情况下，ApplicationContext在任何此类带注释的方法之前或之后以及当前测试类之前或之后被标记为脏，具体取决于配置的methodMode和classMode。
+您可以将@DirtiesContext用作同一类或类层次结构中的类级别和方法级别注解。在这种情况下，ApplicationContext在任何此类带注解的方法之前或之后以及当前测试类之前或之后被标记为脏，具体取决于配置的methodMode和classMode。
 
 以下示例说明了各种配置方案的上下文何时会变脏：
 
@@ -308,9 +308,9 @@ public class CustomTestExecutionListenerTests {
 
 **@Commit**
 
-@Commit表示应在测试方法完成后提交事务测试方法的事务。 您可以使用@Commit作为@Rollback（false）的直接替换，以更明确地传达代码的意图。 类似于@Rollback，@Commit也可以声明为类级别或方法级别的注释。
+@Commit表示应在测试方法完成后提交事务测试方法的事务。 您可以使用@Commit作为@Rollback（false）的直接替换，以更明确地传达代码的意图。 类似于@Rollback，@Commit也可以声明为类级别或方法级别的注解。
 
-以下示例显示了如何使用@Commit注释：
+以下示例显示了如何使用@Commit注解：
 
 ~~~java
 @Commit 
@@ -324,7 +324,7 @@ public void testProcessWithoutRollback() {
 
 @Rollback指示在测试方法完成后是否应回滚事务测试方法的事务。 如果为true，则回滚事务。 否则，提交事务（另请参阅@Commit）。 即使没有显式声明@Rollback，Spring TestContext Framework中的集成测试回滚也默认为true。
 
-当声明为类级别注释时，@Rollback定义测试类层次结构中所有测试方法的默认回滚语义。 当声明为方法级注释时，@Rollback定义特定测试方法的回滚语义，可能会覆盖类级别的@Rollback或@Commit语义。
+当声明为类级别注解时，@Rollback定义测试类层次结构中所有测试方法的默认回滚语义。 当声明为方法级注解时，@Rollback定义特定测试方法的回滚语义，可能会覆盖类级别的@Rollback或@Commit语义。
 
 以下示例导致不回滚测试方法的结果（即，结果提交到数据库）：
 
@@ -338,7 +338,7 @@ public void testProcessWithoutRollback() {
 
 **@BeforeTransaction**
 
-@BeforeTransaction指示在启动事务之前应该运行带注释的void方法，对于已经配置为使用Spring的@Transactional注释在事务中运行的测试方法。 从Spring Framework 4.3开始，@BeforeTransaction方法不需要是公共的，可以在基于Java 8的接口默认方法中声明。
+@BeforeTransaction指示在启动事务之前应该运行带注解的void方法，对于已经配置为使用Spring的@Transactional注解在事务中运行的测试方法。 从Spring Framework 4.3开始，@BeforeTransaction方法不需要是公共的，可以在基于Java 8的接口默认方法中声明。
 
 以下示例显示如何使用@BeforeTransaction批注：
 
@@ -351,7 +351,7 @@ void beforeTransaction() {
 
 **@AfterTransaction**
 
-对于已经配置为在事务中使用Spring的@Transactional注释运行的测试方法，@AfterTransaction指示应在事务结束后运行带注释的void方法。 从Spring Framework 4.3开始，@AfterTransaction方法不需要是公共的，可以在基于Java 8的接口默认方法中声明。
+对于已经配置为在事务中使用Spring的@Transactional注解运行的测试方法，@AfterTransaction指示应在事务结束后运行带注解的void方法。 从Spring Framework 4.3开始，@AfterTransaction方法不需要是公共的，可以在基于Java 8的接口默认方法中声明。
 
 ~~~java
 @AfterTransaction 
@@ -362,7 +362,7 @@ void afterTransaction() {
 
 **@Sql**
 
-@Sql用于注释测试类或测试方法，以配置在集成测试期间针对给定数据库运行的SQL脚本。 以下示例显示了如何使用它：
+@Sql用于注解测试类或测试方法，以配置在集成测试期间针对给定数据库运行的SQL脚本。 以下示例显示了如何使用它：
 
 ~~~java
 @Test
@@ -389,7 +389,7 @@ public void userTest {
 
 **@SqlGroup**
 
-@SqlGroup是一个容器注释，它聚合了几个@Sql注释。 您可以原生使用@SqlGroup来声明多个嵌套的@Sql注释，或者您可以将它与Java 8对可重复注释的支持结合使用，其中@Sql可以在同一个类或方法上多次声明，隐式生成此容器注释。 以下示例显示如何声明SQL组：
+@SqlGroup是一个容器注解，它聚合了几个@Sql注解。 您可以原生使用@SqlGroup来声明多个嵌套的@Sql注解，或者您可以将它与Java 8对可重复注解的支持结合使用，其中@Sql可以在同一个类或方法上多次声明，隐式生成此容器注解。 以下示例显示如何声明SQL组：
 
 ~~~java
 @Test
@@ -401,4 +401,6 @@ public void userTest {
     // execute code that uses the test schema and test data
 }
 ~~~
+
+## 3.4.2 标准注解支持
 
