--- a/Testing/3.4Annotations.md
+++ b/Testing/3.4Annotations.md
@@ -54,7 +54,7 @@ Spring的测试注解包括以下内容：
 
 **@ContextConfiguration**
 
-@ContextConfiguration定义类级元数据，用于确定如何为集成测试加载和配置ApplicationContext。 具体来说，@ ContextConfiguration声明应用程序上下文资源位置或用于加载上下文的带注解的类。
+@ContextConfiguration定义类级元数据，用于确定如何为集成测试加载和配置ApplicationContext。 具体来说，@ContextConfiguration声明应用程序上下文资源位置或用于加载上下文的带注解的类。
 
 资源位置通常是位于类路径中的XML配置文件或Groovy脚本，而带注解的类通常是@Configuration类。 但是，资源位置也可以引用文件系统中的文件和脚本，带注解的类可以是组件类，依此类推。
 
@@ -404,5 +404,371 @@ public void userTest {
 
 ## 3.4.2 标准注解支持
 
+对于Spring TestContext Framework的所有配置，标准语义支持以下注解。 请注意，这些注解并非特定于测试，可以在Spring Framework中的任何位置使用。
+
+@Autowired
+
+@Qualifier
+
+@Resource（javax.annotation）如果存在JSR-250
+
+@ManagedBean（javax.annotation）如果存在JSR-250
+
+@Inject（javax.inject）如果存在JSR-330
+
+@Named（javax.inject）如果存在JSR-330
+
+@PersistenceContext（javax.persistence）如果存在JPA
+
+@PersistenceUnit（javax.persistence）如果存在JPA
+
+@Required
+
+@Transactional
+
+
+>JSR-250生命周期注解
+
+>在Spring TestContext Framework中，您可以在ApplicationContext中配置的任何应用程序组件上使用@PostConstruct和@PreDestroy以及标准语义。 但是，这些生命周期注解在实际测试类中的使用有限。
+
+>如果测试类中的方法使用@PostConstruct注解，则该方法在基础测试框架的任何before方法之前运行（例如，使用JUnit Jupiter的@BeforeEach注解的方法），并且该方法适用于测试类中的每个测试方法。 另一方面，如果测试类中的方法使用@PreDestroy注解，则该方法永远不会运行。 因此，在测试类中，我们建议您使用来自底层测试框架的测试生命周期回调，而不是@PostConstruct和@PreDestroy。
+
+# 3.4.3 Spring JUnit 4 测试注解
+
+仅当与SpringRunner，Spring的JUnit 4规则或Spring的JUnit 4支持类一起使用时，才支持以下注解：
+
+* @IfProfileValue
+
+* @ProfileValueSourceConfiguration
+
+* @Timed
+
+* @Repeat
+
+**@IfProfileValue**
+
+@IfProfileValue表示为特定测试环境启用了带注解的测试。如果配置的ProfileValueSource返回所提供名称的匹配值，则启用测试。否则，测试被禁用，并且有效地被忽略。
+
+您可以在类级别，方法级别或两者中应用@IfProfileValue。 @IfProfileValue的类级别使用优先于该类或其子类中的任何方法的方法级别使用。具体而言，如果在类级别和方法级别启用了测试，则启用测试。缺少@IfProfileValue意味着隐式启用了测试。这类似于JUnit 4的@Ignore注解的语义，除了@Ignore的存在总是禁用测试。
+
+以下示例显示了具有@IfProfileValue批注的测试：
+
+~~~java
+@IfProfileValue(name="java.vendor", value="Oracle Corporation") 
+@Test
+public void testProcessWhichRunsOnlyOnOracleJvm() {
+    // some logic that should run only on Java VMs from Oracle Corporation
+}
+~~~
+
+或者，您可以使用值列表（使用OR语义）配置@IfProfileValue，以在JUnit 4环境中为测试组实现类似TestNG的支持。 请考虑以下示例：
+
+~~~java
+@IfProfileValue(name="test-groups", values={"unit-tests", "integration-tests"}) 
+@Test
+public void testProcessWhichRunsForUnitOrIntegrationTestGroups() {
+    // some logic that should run only for unit and integration test groups
+}
+~~~
+
+**@ProfileValueSourceConfiguration**
+
+@ProfileValueSourceConfiguration是一个类级注解，它指定在检索通过@IfProfileValue注解配置的配置文件值时要使用的ProfileValueSource的类型。 如果未为测试声明@ProfileValueSourceConfiguration，则默认使用SystemProfileValueSource。 以下示例显示如何使用@ProfileValueSourceConfiguration：
+
+~~~java
+@ProfileValueSourceConfiguration(CustomProfileValueSource.class) 
+public class CustomProfileValueSourceTests {
+    // class body...
+}
+~~~
+
+**@Timed**
+
+@Timed表示带注解的测试方法必须在指定的时间段内（以毫秒为单位）完成执行。 如果文本执行时间超过指定的时间段，则测试失败。
+
+时间段包括运行测试方法本身，测试的任何重复（参见@Repeat），以及测试夹具的任何设置或拆除。 以下示例显示了如何使用它：
+
+~~~java
+@Timed(millis = 1000) 
+public void testProcessWithOneSecondTimeout() {
+    // some logic that should not take longer than 1 second to execute
+}
+~~~
+
+Spring的@Timed注解与JUnit 4的@Test（timeout = ...）支持有不同的语义。 具体来说，由于JUnit 4处理测试执行超时的方式（即，通过在单独的线程中执行测试方法），如果测试时间过长，@Test（timeout = ...）会提前让测试失败。 另一方面，Spring的@Timed没有提前让测试失败，而是在失败之前等待测试完成。
+
+**@Repeat**
+
+@Repeat表示必须重复运行带注解的测试方法。 在注解中指定测试方法的执行次数。
+
+要重复的执行范围包括执行测试方法本身以及测试夹具的任何设置或拆除。 以下示例显示了如何使用@Repeat批注：
+
+~~~java
+@Repeat(10) 
+@Test
+public void testProcessRepeatedly() {
+    // ...
+}
+~~~
+
+## 3.4.4  Spring JUnit Jupiter 测试注解
+
+仅当与SpringExtension和JUnit Jupiter（即JUnit 5中的编程模型）结合使用时，才支持以下注解：
+
+* @SpringJUnitConfig
+
+* @SpringJUnitWebConfig
+
+* @EnabledIf
+
+* @DisabledIf
+
+**@SpringJUnitConfig**
+
+@SpringJUnitConfig是一个组合注解，它将来自JUnit Jupiter的@ExtendWith（SpringExtension.class）与来自Spring TestContext Framework的@ContextConfiguration相结合。 它可以在类级别用作@ContextConfiguration的替代品。 关于配置选项，@ContextConfiguration和@SpringJUnitConfig之间的唯一区别是可以使用@SpringJUnitConfig中的value属性声明带注解的类。
+
+以下示例显示如何使用@SpringJUnitConfig批注指定配置类：
+
+~~~java
+@SpringJUnitConfig(TestConfig.class) 
+class ConfigurationClassJUnitJupiterSpringTests {
+    // class body...
+}
+~~~
+
+以下示例显示如何使用@SpringJUnitConfig批注指定配置文件的位置：
+
+~~~java
+@SpringJUnitConfig(locations = "/test-config.xml") 
+class XmlJUnitJupiterSpringTests {
+    // class body...
+}
+~~~
+
+**@SpringJUnitWebConfig**
+
+@SpringJUnitWebConfig是一个组合注解，它将来自JUnit Jupiter的@ExtendWith（SpringExtension.class）与来自Spring TestContext Framework的@ContextConfiguration和@WebAppConfiguration相结合。 您可以在类级别使用它作为@ContextConfiguration和@WebAppConfiguration的替代品。 关于配置选项，@ContextConfiguration和@SpringJUnitWebConfig之间的唯一区别是您可以使用@SpringJUnitWebConfig中的value属性声明带注解的类。 此外，只能使用@SpringJUnitWebConfig中的resourcePath属性覆盖@WebAppConfiguration中的value属性。
+
+以下示例显示如何使用@SpringJUnitWebConfig批注指定配置类：
+
+~~~java
+@SpringJUnitWebConfig(TestConfig.class) 
+class ConfigurationClassJUnitJupiterSpringWebTests {
+    // class body...
+}
+~~~
+
+以下示例显示如何使用@SpringJUnitWebConfig批注指定配置文件的位置：
+
+~~~java
+@SpringJUnitWebConfig(locations = "/test-config.xml") 
+class XmlJUnitJupiterSpringWebTests {
+    // class body...
+}
+~~~
+
+**@EnabledIf**
+
+@EnabledIf用于表示已启用带注解的JUnit Jupiter测试类或测试方法，并且如果提供的表达式的计算结果为true，则应运行该函数。 具体来说，如果表达式求值为Boolean.TRUE或字符串等于true（忽略大小写），则启用测试。 在类级别应用时，默认情况下也会自动启用该类中的所有测试方法。
+
+表达式可以是以下任何一种：
+
+* Spring Expression Language（SpEL）表达式。 例如：@EnabledIf("#{systemProperties['os.name'].toLowerCase().contains('mac')}")
+
+* Spring环境中可用的属性的占位符。 例如：@EnabledIf("${smoke.tests.enabled}")
+
+* 文字文字。 例如：@EnabledIf("true")
+
+但请注意，不是属性占位符动态解析结果的文本文字的实用价值为零，因为@EnabledIf（“false”）等同于@Disabled而@EnabledIf（“true”）在逻辑上毫无意义。
+
+您可以使用@EnabledIf作为元注解来创建自定义组合注解。 例如，您可以创建自定义@EnabledOnMac注解，如下所示：
+
+~~~java
+@Target({ElementType.TYPE, ElementType.METHOD})
+@Retention(RetentionPolicy.RUNTIME)
+@EnabledIf(
+    expression = "#{systemProperties['os.name'].toLowerCase().contains('mac')}",
+    reason = "Enabled on Mac OS"
+)
+public @interface EnabledOnMac {}
+~~~
+
+**@DisabledIf**
+
+@DisabledIf用于表示已禁用带注解的JUnit Jupiter测试类或测试方法，并且如果提供的表达式的计算结果为true，则不应执行。 具体来说，如果表达式求值为Boolean.TRUE或字符串等于true（忽略大小写），则禁用测试。 在类级别应用时，该类中的所有测试方法也会自动禁用。
+
+表达式可以是如下格式：
+
+* Spring Expression Language（SpEL）表达式。 例如：@DisabledIf("#{systemProperties['os.name'].toLowerCase().contains('mac')}")
+
+* Spring环境中可用的属性的占位符。 例如： @DisabledIf("${smoke.tests.disabled}")
+
+* 文字文字。 例如：@DisabledIf（“true”）
+
+但请注意，不是属性占位符动态解析结果的文本文字实际值为零，因为@DisabledIf（“true”）等同于@Disabled，而@DisabledIf（“false”）在逻辑上没有意义。
+
+您可以使用@DisabledIf作为元注解来创建自定义组合注解。 例如，您可以创建自定义@DisabledOnMac注解，如下所示：
+
+~~~java
+@Target({ElementType.TYPE, ElementType.METHOD})
+@Retention(RetentionPolicy.RUNTIME)
+@DisabledIf(
+    expression = "#{systemProperties['os.name'].toLowerCase().contains('mac')}",
+    reason = "Disabled on Mac OS"
+)
+public @interface DisabledOnMac {}
+~~~
+
+## 3.4.5 测试的元注解支持
+
+您可以将大多数与测试相关的注解用作元注解，以创建自定义组合注解并减少测试套件中的配置重复。
+
+您可以将以下各项作为元注解与TestContext框架结合使用。
+
+* @BootstrapWith
+
+* @ContextConfiguration
+
+* @ContextHierarchy
+
+* @ActiveProfiles
+
+* @TestPropertySource
+
+* @DirtiesContext
+
+* @WebAppConfiguration
+
+* @TestExecutionListeners
+
+* @Transactional
+
+* @BeforeTransaction
+
+* @AfterTransaction
+
+* @Commit
+
+* @Rollback
+
+* @sql
+
+* @SqlConfig
+
+* @SqlGroup
+
+* @Repeat（仅在JUnit 4上受支持）
+
+* @Timed（仅在JUnit 4上受支持）
+
+* @IfProfileValue（仅在JUnit 4上受支持）
+
+* @ProfileValueSourceConfiguration（仅在JUnit 4上受支持）
+
+* @SpringJUnitConfig（仅在JUnit Jupiter上受支持）
+
+* @SpringJUnitWebConfig（仅在JUnit Jupiter上受支持）
+
+* @EnabledIf（仅在JUnit Jupiter上受支持）
+
+* @DisabledIf（仅在JUnit Jupiter上受支持）
+
+请考虑以下示例：
+
+~~~java
+@RunWith(SpringRunner.class)
+@ContextConfiguration({"/app-config.xml", "/test-data-access-config.xml"})
+@ActiveProfiles("dev")
+@Transactional
+public class OrderRepositoryTests { }
+
+@RunWith(SpringRunner.class)
+@ContextConfiguration({"/app-config.xml", "/test-data-access-config.xml"})
+@ActiveProfiles("dev")
+@Transactional
+public class UserRepositoryTests { }
+~~~
+
+如果我们发现我们在基于JUnit 4的测试套件中重复了前面的配置，我们可以通过引入一个自定义组合注解来集中Spring的常用测试配置来减少重复，如下所示：
+
+~~~java
+@Target(ElementType.TYPE)
+@Retention(RetentionPolicy.RUNTIME)
+@ContextConfiguration({"/app-config.xml", "/test-data-access-config.xml"})
+@ActiveProfiles("dev")
+@Transactional
+public @interface TransactionalDevTestConfig { }
+~~~
+
+然后我们可以使用我们的自定义@TransactionalDevTestConfig注解来简化各个基于JUnit 4的测试类的配置，如下所示：
+
+~~~java
+@RunWith(SpringRunner.class)
+@TransactionalDevTestConfig
+public class OrderRepositoryTests { }
+
+@RunWith(SpringRunner.class)
+@TransactionalDevTestConfig
+public class UserRepositoryTests { }
+~~~
+
+如果我们编写使用JUnit Jupiter的测试，我们可以进一步减少代码重复，因为JUnit 5中的注解也可以用作元注解。 请考虑以下示例：
+
+~~~java
+@ExtendWith(SpringExtension.class)
+@ContextConfiguration({"/app-config.xml", "/test-data-access-config.xml"})
+@ActiveProfiles("dev")
+@Transactional
+class OrderRepositoryTests { }
+
+@ExtendWith(SpringExtension.class)
+@ContextConfiguration({"/app-config.xml", "/test-data-access-config.xml"})
+@ActiveProfiles("dev")
+@Transactional
+class UserRepositoryTests { }
+~~~
+
+如果我们发现我们在基于JUnit Jupiter的测试套件中重复上述配置，我们可以通过引入一个自定义组合注解来集中Spring和JUnit Jupiter的常用测试配置来减少重复，如下所示：
+
+~~~java
+@Target(ElementType.TYPE)
+@Retention(RetentionPolicy.RUNTIME)
+@ExtendWith(SpringExtension.class)
+@ContextConfiguration({"/app-config.xml", "/test-data-access-config.xml"})
+@ActiveProfiles("dev")
+@Transactional
+public @interface TransactionalDevTestConfig { }
+~~~
+
+然后我们可以使用我们的自定义@TransactionalDevTestConfig注解来简化各个基于JUnit Jupiter的测试类的配置，如下所示：
+
+~~~java
+@TransactionalDevTestConfig
+class OrderRepositoryTests { }
+
+@TransactionalDevTestConfig
+class UserRepositoryTests { }
+~~~
+
+由于JUnit Jupiter支持使用@Test，@RepeatedTest，ParameterizedTest和其他作为元注解，因此您还可以在测试方法级别创建自定义组合注解。 例如，如果我们希望创建一个组合注解，它将来自JUnit Jupiter的@Test和@Tag注解与Spring中的@Transactional注解相结合，我们可以创建一个@TransactionalIntegrationTest注解，如下所示：
+
+~~~java
+@Target(ElementType.METHOD)
+@Retention(RetentionPolicy.RUNTIME)
+@Transactional
+@Tag("integration-test") // org.junit.jupiter.api.Tag
+@Test // org.junit.jupiter.api.Test
+public @interface TransactionalIntegrationTest { }
+~~~
+
+然后我们可以使用我们的自定义@TransactionalIntegrationTest批注来简化各个基于JUnit Jupiter的测试方法的配置，如下所示：
+
+~~~java
+@TransactionalIntegrationTest
+void saveOrder() { }
+
+@TransactionalIntegrationTest
+void deleteOrder() { }
+~~~
 
 
